fix: display nav on tablet, path to bg img

--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ h4 {
 }
 
 .header-bg {
-  background-image: url("../../assets/images/bg-fone.png");
+  background-image: url("../assets/images/bg-fone.png");
   background-attachment: fixed;
   background-size: cover;
   background-position: 0 -53px;
@@ -672,7 +672,7 @@ h4 {
   padding: 18px 8px;
 }
 
-@media (max-width: 64em) {
+@media (max-width: 30em) {
   nav {
     display: none;
     position: fixed;
