--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -8,7 +8,10 @@
 }
 
 nav {
-  @include media-laptop {
+  @include media-tablet {
+  
+  }
+  @include media-mobile {
     display: none;
     position: fixed;
     z-index: 99;
